--- a/starter/index.html
+++ b/starter/index.html
@@ -5,29 +5,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Lernantino // Web Developer</title>
-  <link rel="stylesheet" href="./assets/css/style.css" />
+  <title>James Sneath - Web Developer</title>
+  <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
   <!-- main logo / nav -->
   <header>
-    <h1>Lernantino</h1>
+    <h1>James Sneath</h1>
     <nav>
+      <ul>
+        <a href="#about">About</a>
+        <a href="#my-work">My Work</a>
+        <a href="#contact">Contact me</a>
+    </ul>
     </nav>
   </header>
 
+  <!-- <div class="my-photo">
+    <img src="images/-photome.jpg" alt="Photo of me">
+  </div> -->
+
   <!-- hero banner -->
   <section class="hero-banner">
+    <div class="my-photo">
+      <img src="images/-photome.jpg" alt="Photo of me">
+    </div>
     <div>
-      <h2>Cool subtitle here!</h2>
+      <h2>Web Portfolio</h2>
     </div>
   </section>
 
   <main class="page-wrapper">
     <!-- about me -->
     <section class="page-section" id="about">
-      <h2>About Me</h2>
+      <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto quod consectetur itaque doloribus assumenda? Voluptatum consequuntur laborum exercitationem quos dolorem commodi expedita atque aliquid non ipsum, ducimus repudiandae! Laboriosam, sint.</h2>
     </section>
 
     <!-- portfolio container -->
