images added and display in flex box grid

--- a/starter/index.html
+++ b/starter/index.html
@@ -45,6 +45,19 @@
     <!-- portfolio container -->
     <section class="page-section" id="work">
       <h2>Work</h2>
+      <div class="image-container">
+        <a href="https://www.github.com" class="big-image"> <img src="images/02-portfolio-4.jpg" alt="A brief description of the image"> <span class="work-label">WORK 1</span></a>
+          <div class="grid-container">
+            <div class="grid-line-1">
+              <a href="https://www.github.com"><img src="images/02-portfolio-2.jpg" alt="A brief description of the image"><span class="work-label"></span>>WORK 2</a>
+              <a href="https://www.github.com"><img src="images/02-portfolio-3.jpg" alt="A brief description of the image"><span class="work-label"></span>WORK 3</a>
+            </div>
+            <div class="grid-line-2">
+              <a href="https://www.github.com"><img src="images/02-portfolio-1.jpg" alt="A brief description of the image"><span class="work-label"></span>WORK 4</a>
+              <a href="https://www.github.com"><img src="images/02-run-buddy.jpg" alt="A brief description of the image"><span class="work-label"></span>WORK 5</a>
+            </div>
+           </div> 
+      </div>
     </section>
 
     <!-- contact -->
