fixed the grid to show content correctly

--- a/starter/index.html
+++ b/starter/index.html
@@ -16,7 +16,7 @@
     <nav>
       <ul>
         <a href="#about">About</a>
-        <a href="#my-work">My Work</a>
+        <a href="#work">My Work</a>
         <a href="#contact">Contact me</a>
     </ul>
     </nav>
@@ -44,20 +44,36 @@
 
     <!-- portfolio container -->
     <section class="page-section" id="work">
-      <h2>Work</h2>
-      <div class="image-container">
-        <a href="https://www.github.com" class="big-image"> <img src="images/02-portfolio-4.jpg" alt="A brief description of the image"> <span class="work-label">WORK 1</span></a>
-          <div class="grid-container">
-            <div class="grid-line-1">
-              <a href="https://www.github.com"><img src="images/02-portfolio-2.jpg" alt="A brief description of the image"><span class="work-label"></span>>WORK 2</a>
-              <a href="https://www.github.com"><img src="images/02-portfolio-3.jpg" alt="A brief description of the image"><span class="work-label"></span>WORK 3</a>
+      
+        <h2>Work</h2>
+
+        <div class="portfolio-links">
+
+          <div class="big-image">
+            <a href="https://www.github.com"> <img src="images/02-portfolio-4.jpg" alt="A brief description of the image"> <span class="work-label">WORK 1</span></a>
+          </div>
+          <div class="grid-line-1">
+
+            <div class="image-2">
+             <a href="https://www.github.com"><img src="images/02-portfolio-2.jpg" alt="A brief description of the image"><span class="work-label">WORK 2</span></a>
+             </div>
+
+             <div class="image-3">
+               <a href="https://www.github.com"><img src="images/02-portfolio-3.jpg" alt="A brief description of the image"><span class="work-label">WORK 3</span></a>
+             </div>
+          </div>
+
+          <div class="grid-line-2">
+
+            <div class="image-4">
+             <a href="https://www.github.com"><img src="images/02-portfolio-1.jpg" alt="A brief description of the image"><span class="work-label">WORK 4</span></a>
             </div>
-            <div class="grid-line-2">
-              <a href="https://www.github.com"><img src="images/02-portfolio-1.jpg" alt="A brief description of the image"><span class="work-label"></span>WORK 4</a>
-              <a href="https://www.github.com"><img src="images/02-run-buddy.jpg" alt="A brief description of the image"><span class="work-label"></span>WORK 5</a>
-            </div>
-           </div> 
-      </div>
+
+            <div class="image-5">
+             <a href="https://www.github.com"><img src="images/02-run-buddy.jpg" alt="A brief description of the image"><span class="work-label">WORK 5</span></a>
+             </div>
+          </div>
+        </div>
     </section>
 
     <!-- contact -->
