added color and contact me section

--- a/starter/index.html
+++ b/starter/index.html
@@ -7,13 +7,16 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>James Sneath - Web Developer</title>
   <link rel="stylesheet" href="./css/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
   <!-- main logo / nav -->
   <header>
-    <h1>James Sneath</h1>
+    
     <nav>
+      <h1 class="title-name">James Sneath</h1>
+      
       <ul>
         <a href="#about">About</a>
         <a href="#work">My Work</a>
@@ -39,7 +42,10 @@
   <main class="page-wrapper">
     <!-- about me -->
     <section class="page-section" id="about">
-      <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto quod consectetur itaque doloribus assumenda? Voluptatum consequuntur laborum exercitationem quos dolorem commodi expedita atque aliquid non ipsum, ducimus repudiandae! Laboriosam, sint.</h2>
+      <div class="about-me">
+      <h2>About me</h2>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto quod consectetur itaque doloribus assumenda? Voluptatum consequuntur laborum exercitationem quos dolorem commodi expedita atque aliquid non ipsum, ducimus repudiandae! Laboriosam, sint.</p>
+    </div>
     </section>
 
     <!-- portfolio container -->
@@ -78,7 +84,23 @@
 
     <!-- contact -->
     <section class="page-section contact" id="contact">
-      <h2>Contact Me</h2>
+      <div class="contact-me">
+        <h2>Contact Me</h2>
+      </div>
+      <div class="contact-items">
+        <div>
+          <a href="https://www.github.com/jsneath">Github</a>
+        </div>
+        <div>
+          <a href="https://www.linkedin.com/in/james-sneath/">LinkedIn</a>
+        </div>
+        <div>
+          <a href="tel:07703711971">07703711971</a>
+        </div>
+        <div>
+          <a href="mailto:jamessneath1@gmail.com">jamessneath1@gmail.com</a>
+        </div>
+      </div>
     </section>
   </main>
 </body>
